# phoni

./: CITATION.cff  CMakeLists.txt  README.md  benchmark.sh  catfasta.py  no_thresholds  prefixpattern.py  readlog.sh  splitpattern.py  testsuite.sh
CMakeModules/: ConfigureCompilerGcc.cmake
include/common/: common.hpp
include/ms/: CMakeLists.txt  ms_pointers.hpp  ms_rle_string.hpp  phoni.hpp
pipeline/: moni  no_thresholds  phoni  thresholds
test/src/: CMakeLists.txt  align.cpp  build_phoni.cpp  bwt2rlbwt.cpp  matching_statistics.cpp  patternstats.cpp  phoni.cpp  phoni_compatibility_driver.cpp  rlbwt.cpp  rle_matching_statistics.cpp  rlebwt_ms_build.cpp  shapedslp_test.cpp
